[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "si-runtime"
version = "0.1.0"
description = "Python runtime for the SuperInstance ecosystem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "SuperInstance", email = "dev@superinstance.org" },
]
keywords = ["agent", "runtime", "conservation", "spectral", "fleet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/SuperInstance/si-runtime-python"
Repository = "https://github.com/SuperInstance/si-runtime-python"
Issues = "https://github.com/SuperInstance/si-runtime-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["si_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
