[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "si-runtime"
version = "0.1.0"
description = "Python runtime for the SuperInstance ecosystem — conservation budgets, spectral ranking, capability discovery"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
